fix: pr fixes